[package]
name = "hfst-sys"
version = "0.1.8"
edition = "2024"
links = "hfst_c"
build = "build.rs"
license = "GPL-3.0-or-later"
description = "Wrappers to libhfst (raw bindings to the c api)"
repository = "https://github.com/giellatekno/hfst-rust"

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3.31"
