[package]
name = "hfst"
version = "0.1.2"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Wrappers to libhfst via libhfst_c"
repository = "https://github.com/giellatekno/hfst-rust"

[dependencies]
hfst-sys = { version = "0.1.8" }
thiserror = "2.0.17"
tokio = { version = "1.48", features = ["rt", "sync"], optional = true }

[build-dependencies]
rustc_version = "0.4"

[features]
tokio-actors = ["dep:tokio"]

[package.metadata.docs.rs]
all-features = true
